--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,50 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.0'
+	id 'org.springframework.boot' version '2.6.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'io.openapiprocessor.openapi-processor' version '2022.1'
+	id 'io.freefair.lombok' version '6.4.2'
 }
 
-group = 'com.verint'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+java {
+	toolchain {
+		languageVersion.set(JavaLanguageVersion.of(11))
 	}
 }
+
+group = 'com.verint.wfm'
+version = '0.0.1-SNAPSHOT'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs "$projectDir/build/openapi"
+		}
+	}
+}
+
+compileJava.dependsOn('processSpring')
+
+openapiProcessor {
+	spring {
+		processor 'io.openapiprocessor:openapi-processor-spring:2022.3'
+		apiPath "$projectDir/src/main/resources/tasks-openapi.yaml"
+		targetDir "$projectDir/build/openapi"
+		mapping "$projectDir/src/main/resources/mapping.yaml"
+		showWarnings true
+	}
 }
