--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ java {
 	}
 }
 
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.verint.tasksapi.TasksApiApplication'
+		)
+	}
+}
+
 group = 'com.verint.wfm'
 version = '0.0.1-SNAPSHOT'
 
