Implement getAll tasks with missing coverage before adding JaCoCo

--- a/src/main/resources/mapping.yaml
+++ b/src/main/resources/mapping.yaml
@@ -3,3 +3,9 @@ openapi-processor-mapping: v2
 options:
   package-name: com.verint.tasksapi
   model-name-suffix: DTO
+  bean-validation: true
+
+map:
+  types:
+    - type: array => java.util.List
+  result: org.springframework.http.ResponseEntity
