--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,18 @@ repositories {
 }
 
 dependencies {
+	compileOnly 'org.mapstruct:mapstruct:1.4.2.Final'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.postgresql:postgresql:42.3.4'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -46,6 +56,12 @@ sourceSets {
 }
 
 compileJava.dependsOn('processSpring')
+
+compileJava {
+	options.compilerArgs += [
+			'-Amapstruct.defaultComponentModel=spring',
+	]
+}
 
 openapiProcessor {
 	spring {
