--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5434/tasks
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=blue
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
