--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'io.openapiprocessor.openapi-processor' version '2022.1'
 	id 'io.freefair.lombok' version '6.4.2'
 	id 'jacoco'
+	id 'org.sonarqube' version '3.3'
 }
 
 java {
@@ -28,14 +29,19 @@ repositories {
 
 dependencies {
 	compileOnly 'org.mapstruct:mapstruct:1.4.2.Final'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql:42.3.4'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mapstruct:mapstruct:1.4.2.Final'
 }
 
 sourceSets {
