--- a/build.gradle
+++ b/build.gradle
@@ -78,8 +78,19 @@ test {
 jacocoTestReport {
 	dependsOn test
 	reports {
-		xml.required = false
+		xml.required = true
 		csv.required = false
+		xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
 		html.destination file("${buildDir}/reports/jacoco/test/html")
+	}
+}
+
+sonarqube {
+	properties {
+		property 'sonar.projectName', 'tasks-api'
+		property 'sonar.sourceEncoding', 'UTF-8'
+		property 'sonar.sources', 'src/main/java'
+		property 'sonar.tests', 'src/test/java'
+		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco'
 	}
 }
