Add Sonarqube keys to Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,14 @@ language: java
 
 jdk: openjdk17
 
+addons:
+  sonarcloud:
+    organization: "jamesmmbrown"
+    token:
+      secure: "5d9ca93edc9a93997a023dfb3fa20c119c90a859"
+
+script:
+  - ./gradlew sonarqube
+
 before_install:
   - chmod +x gradlew
