--- a/build.gradle
+++ b/build.gradle
@@ -87,10 +87,6 @@ jacocoTestReport {
 
 sonarqube {
 	properties {
-		property 'sonar.projectName', 'tasks-api'
-		property 'sonar.sourceEncoding', 'UTF-8'
-		property 'sonar.sources', 'src/main/java'
-		property 'sonar.tests', 'src/test/java'
-		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco'
+		property "sonar.projectKey", "jamesmmbrown_tasks-api"
 	}
 }
