--- a/build.gradle
+++ b/build.gradle
@@ -88,5 +88,10 @@ jacocoTestReport {
 sonarqube {
 	properties {
 		property "sonar.projectKey", "jamesmmbrown_tasks-api"
+		property 'sonar.projectName', 'tasks-api'
+		property 'sonar.sourceEncoding', 'UTF-8'
+		property 'sonar.sources', 'src/main/java'
+		property 'sonar.tests', 'src/test/java'
+		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco'
 	}
 }
