--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ jar {
 		)
 	}
 }
+
 group = 'com.verint.wfm'
 version = '0.0.1-SNAPSHOT'
 repositories {
@@ -70,9 +71,19 @@ openapiProcessor {
 	}
 }
 
-test {
-	useJUnitPlatform()
-	finalizedBy jacocoTestReport
+jacoco {
+	toolVersion = "0.8.7"
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "jamesmmbrown_tasks-api"
+		property 'sonar.projectName', 'tasks-api'
+		property 'sonar.sourceEncoding', 'UTF-8'
+		property 'sonar.sources', 'src/main/java'
+		property 'sonar.tests', 'src/test/java'
+		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco'
+	}
 }
 
 jacocoTestReport {
@@ -85,13 +96,14 @@ jacocoTestReport {
 	}
 }
 
-sonarqube {
-	properties {
-		property "sonar.projectKey", "jamesmmbrown_tasks-api"
-		property 'sonar.projectName', 'tasks-api'
-		property 'sonar.sourceEncoding', 'UTF-8'
-		property 'sonar.sources', 'src/main/java'
-		property 'sonar.tests', 'src/test/java'
-		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco'
-	}
+jacocoTestCoverageVerification {
+	violationRules {}
+}
+
+test.finalizedBy jacocoTestReport
+check.dependsOn jacocoTestCoverageVerification
+
+test {
+	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
