--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,7 @@ sonarqube {
 		property 'sonar.sourceEncoding', 'UTF-8'
 		property 'sonar.sources', 'src/main/java'
 		property 'sonar.tests', 'src/test/java'
+		property 'sonar.core.codeCoveragePlugin', 'jacoco'
 		property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco/test/jacoco.xml"
 	}
 }
