--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -4,3 +4,5 @@ spring.datasource.password=blue
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.generate-ddl=true
+
+if.cors.allowed.origins=http://localhost*
