Add CORS configuration tests

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -5,4 +5,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.generate-ddl=true
 
-if.cors.allowed.origins=http://localhost*
+tasks.cors.allowed.origins=http://localhost*,https://elm-tasks-ui.herokuapp.com*
