--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=${DATABASE_URL}
 
 spring.jpa.hibernate.ddl-auto=update
+
+tasks.cors.allowed.origins=http://localhost*,https://elm-tasks-ui.herokuapp.com*
